# monte-carlo-gp

./: .gitignore  README.md  backtest.py  main.py  plan.md  pyproject.toml  test_setup.py
.claude/: settings.local.json
src/: __init__.py  config.py  data_loader.py  elo.py  features.py  predictor.py  simulation.py  validation.py
