[project]
name = "monte-carlo-gp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arviz>=0.22.0",
    "duckdb>=1.4.2",
    "fastf1>=3.7.0",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "pymc>=5.26.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.52.1",
]
